@@ -1,5 +1,15 @@
 2021-08-19  Simon Fraser  <simon.fraser@apple.com>
 
+        Fix the typo in horiontalRubberbandAmountInContentCoordinates
+        https://bugs.webkit.org/show_bug.cgi?id=229255
+
+        Reviewed by Tim Horton.
+
+        * UIProcess/API/ios/WKWebViewIOS.mm:
+        (-[WKWebView _contentBoundsExtendedForRubberbandingWithScale:]):
+
+2021-08-19  Simon Fraser  <simon.fraser@apple.com>
+
         Rename WebPageProxy::headerHeight() and related to make it clear they are for printing
         https://bugs.webkit.org/show_bug.cgi?id=229242
 
